arlex-derive/tests/cases/account_on_enum.stderr
error: expected `struct`
 --> tests/cases/account_on_enum.rs:5:5
  |
5 | pub enum Bad {
  |     ^^^^
