arlex-derive/tests/cases/account_on_enum.rs
use arlex_lang::prelude::*;

// Should fail: #[account] only supports named-field structs, not enums
#[account]
pub enum Bad {
    A,
    B,
}

fn main() {}
